// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsibleFieldset should render a collapsed fieldset (header only) 1`] = `
<fieldset
  className="form-group theme-collapsible-panel collapsible-panel"
>
  <CollapsiblePanel
    expanded={false}
    header={
      [
        {
          "label": "Jimmy, Somsanith",
        },
        [],
      ]
    }
    id="my-fieldset"
    onToggle={[Function]}
  >
    <InlineMessageInformation
      description="This is description"
      id="my-fieldset-description"
    />
    <Widget
      id="my-fieldset"
      schema={
        {
          "key": [
            "firstname",
          ],
          "schema": {
            "type": "string",
          },
          "title": "FirstName",
          "type": "string",
        }
      }
      value={
        {
          "firstname": "Jimmy",
          "isClosed": true,
          "lastname": "Somsanith",
        }
      }
      widgets={{}}
    />
    <Widget
      id="my-fieldset"
      schema={
        {
          "key": [
            "lastname",
          ],
          "schema": {
            "type": "string",
          },
          "title": "LastName",
          "type": "string",
        }
      }
      value={
        {
          "firstname": "Jimmy",
          "isClosed": true,
          "lastname": "Somsanith",
        }
      }
      widgets={{}}
    />
  </CollapsiblePanel>
</fieldset>
`;

exports[`CollapsibleFieldset should render a custom title 1`] = `
<fieldset
  className="form-group theme-collapsible-panel collapsible-panel"
>
  <CollapsiblePanel
    expanded={true}
    header={
      [
        {
          "label": "Basic: Jimmy Somsanith",
        },
        [],
      ]
    }
    id="my-fieldset"
    onToggle={[Function]}
  >
    <InlineMessageInformation
      description="This is description"
      id="my-fieldset-description"
    />
    <Widget
      id="my-fieldset"
      schema={
        {
          "key": [
            "firstname",
          ],
          "schema": {
            "type": "string",
          },
          "title": "FirstName",
          "type": "string",
        }
      }
      value={
        {
          "firstname": "Jimmy",
          "isClosed": false,
          "lastname": "Somsanith",
        }
      }
      widgets={{}}
    />
    <Widget
      id="my-fieldset"
      schema={
        {
          "key": [
            "lastname",
          ],
          "schema": {
            "type": "string",
          },
          "title": "LastName",
          "type": "string",
        }
      }
      value={
        {
          "firstname": "Jimmy",
          "isClosed": false,
          "lastname": "Somsanith",
        }
      }
      widgets={{}}
    />
  </CollapsiblePanel>
</fieldset>
`;

exports[`CollapsibleFieldset should render a full fieldset (header and body) 1`] = `
<fieldset
  className="form-group theme-collapsible-panel collapsible-panel"
>
  <CollapsiblePanel
    expanded={true}
    header={
      [
        {
          "label": "Jimmy, Somsanith",
        },
        [],
      ]
    }
    id="my-fieldset"
    onToggle={[Function]}
  >
    <InlineMessageInformation
      description="This is description"
      id="my-fieldset-description"
    />
    <Widget
      id="my-fieldset"
      schema={
        {
          "key": [
            "firstname",
          ],
          "schema": {
            "type": "string",
          },
          "title": "FirstName",
          "type": "string",
        }
      }
      value={
        {
          "firstname": "Jimmy",
          "isClosed": false,
          "lastname": "Somsanith",
        }
      }
      widgets={{}}
    />
    <Widget
      id="my-fieldset"
      schema={
        {
          "key": [
            "lastname",
          ],
          "schema": {
            "type": "string",
          },
          "title": "LastName",
          "type": "string",
        }
      }
      value={
        {
          "firstname": "Jimmy",
          "isClosed": false,
          "lastname": "Somsanith",
        }
      }
      widgets={{}}
    />
  </CollapsiblePanel>
</fieldset>
`;

exports[`CollapsibleFieldset should render without value 1`] = `
<fieldset
  className="form-group theme-collapsible-panel collapsible-panel"
>
  <CollapsiblePanel
    expanded={true}
    header={
      [
        {
          "label": "Basic",
        },
        [],
      ]
    }
    id="my-fieldset"
    onToggle={[Function]}
  >
    <InlineMessageInformation
      description="This is description"
      id="my-fieldset-description"
    />
    <Widget
      id="my-fieldset"
      schema={
        {
          "key": [
            "firstname",
          ],
          "schema": {
            "type": "string",
          },
          "title": "FirstName",
          "type": "string",
        }
      }
      value={
        {
          "isClosed": undefined,
        }
      }
      widgets={{}}
    />
    <Widget
      id="my-fieldset"
      schema={
        {
          "key": [
            "lastname",
          ],
          "schema": {
            "type": "string",
          },
          "title": "LastName",
          "type": "string",
        }
      }
      value={
        {
          "isClosed": undefined,
        }
      }
      widgets={{}}
    />
  </CollapsiblePanel>
</fieldset>
`;
